--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "email": "daan@vanham.io"
   },
   "license": "MIT",
+  "dependencies": {
+    "camelcase": "^1.0.2",
+    "http-status-code": "^1.0.3"
+  },
   "devDependencies": {
     "code": "^1.4.0",
     "lab": "^5.8.0"
