--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Easily add status code and headers to a response in Hapi",
   "main": "index.js",
   "keywords": [
-      "hapi",
-      "response",
-      "statusCode"
+    "hapi",
+    "response",
+    "statusCode"
   ],
   "scripts": {
     "test": "./node_modules/.bin/lab -f -t 100 -m 3000",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "code": "^1.4.0",
+    "coveralls": "^2.11.2",
     "lab": "^5.8.0"
   }
 }
