--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "code": "^1.4.0",
     "coveralls": "^2.11.2",
-    "lab": "^5.8.0"
+    "lab": "^5.8.0",
+    "plato": "^1.4.0"
   }
 }
