--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hapi-status",
   "version": "1.1.1",
   "description": "Easily add status code and headers to a response in Hapi",
-  "main": "index.js",
+  "main": "./lib",
   "keywords": [
     "hapi",
     "response",
